--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "sass-loader": "^11.0.1"
     },
     "dependencies": {
+        "chart.js": "^3.8.0",
         "jquery": "^3.6.0",
         "popper.js": "^1.16.1",
         "sweetalert2": "^11.4.17"
